--- a/.gitmodules
+++ b/.gitmodules
@@ -8,8 +8,10 @@
   branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
+  #url = https://github.com/hafs-community/ccpp-physics
+  #branch = feature/hafs.v2.0.1
   url = https://github.com/hafs-community/ccpp-physics
-  branch = feature/hafs.v2.0.1
+  branch = hafsv2.0.1a_update
 [submodule "upp"]
   path = upp
   url = https://github.com/hafs-community/UPP
